# audiostretchy

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  PLAN.md  README.md  TEST_REPORT.md  TODO.md  ci.yml  llms.txt  pyproject.toml  setup.cfg  setup.py  src.txt
.github/workflows/: ci.yaml  ci.yml  compile-linux.yaml  compile-mac.yaml  compile-windows.yaml  docs.yml  publish.yaml  release.yml
docs/: 404.html  conf.py  index.html  index.md  sitemap.xml
docs/01-installation/: index.html
docs/02-quick-start/: index.html
docs/03-cli-usage/: index.html
docs/04-python-api/: index.html
docs/05-how-it-works/: index.html
docs/06-core-architecture/: index.html
docs/07-parameters-reference/: index.html
docs/08-contributing/: index.html
docs/09-api-reference/: index.html
docs/search/: search_index.json
src/audiostretchy/: __init__.py  __main__.py  core.py  dummy.c  stretch.py
src/audiostretchy/c_interface/: __init__.py  build.py  wrapper.py
src/audiostretchy/interface/: stretch.py  tdhs.py
src/audiostretchy/interface/mac/: _stretch.dylib
src_docs/md/: 01-installation.md  02-quick-start.md  04-python-api.md  06-core-architecture.md  08-contributing.md  09-api-reference.md  index.md
tests/: conftest.py  test_cli.py  test_core.py  test_mono_audio.py  test_performance.py  test_stretch.py
