[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "audiostretchy"
dynamic = ["version"] # Specify that version is dynamic
description = "AudioStretchy is a Python library and CLI tool that which performs fast, high-quality time-stretching of WAV/MP3 files without changing their pitch. Works well for speech, can time-stretch silence separately. AudioStretchy is a wrapper around the audio-stretch C library by David Bryant."
readme = "README.md"
authors = [{name = "Adam Twardoch", email = "adam+github@twardoch.com"}]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt", "AUTHORS.md"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fire>=0.5.0",
    "numpy>=1.23.0", # Pedalboard uses numpy
    "pedalboard>=0.8.6", # Main new dependency
    "importlib-metadata; python_version<'3.8'",
]

[project.optional-dependencies]
all = [
    # pydub and pymp3 are no longer primary dependencies for mp3 handling if pedalboard works
    # but keeping them for now in case pedalboard has issues or for comparison
    "pydub>=0.25.1; sys_platform == 'darwin'",
    "pymp3>=0.1.9; sys_platform == 'win32' or sys_platform == 'linux'",
    # soxr is also replaced by pedalboard's resampling
    "soxr>=0.3.5", # Keep for now, might be removed if pedalboard resampling is sufficient
]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov",
    "soundfile", # For verifying audio file properties in tests
]

[project.urls]
Homepage = "https://github.com/twardoch/audiostretchy"
Documentation = "https://pyscaffold.org/" # Placeholder, update if official docs exist

[project.scripts]
audiostretchy = "audiostretchy.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] # Ensure tests are not included as a package

[tool.setuptools.package-data]
"*" = ["*.dll", "*.so", "*.dylib"] # For the C library, if kept

[tool.pytest.ini_options]
addopts = "--cov src/audiostretchy --cov-report term-missing --verbose" # Adjusted path for coverage
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"] # Black-compatible
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]
