[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "audiostretchy"
dynamic = ["version"]
description = "AudioStretchy is a Python library and CLI tool for high-quality time-stretching of audio files without changing pitch. Uses David Bryant's audio-stretch C library with Pedalboard for versatile audio I/O."
readme = "README.md"
authors = [{name = "Adam Twardoch", email = "adam+github@twardoch.com"}]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt", "AUTHORS.md"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fire>=0.5.0",
    "numpy>=1.23.0",
    "pedalboard>=0.8.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "build>=0.10.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "soundfile>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/audiostretchy"
Repository = "https://github.com/twardoch/audiostretchy.git"
Issues = "https://github.com/twardoch/audiostretchy/issues"

[project.scripts]
audiostretchy = "audiostretchy.__main__:main"

# Hatch configuration
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/audiostretchy"]
include = [
    "src/audiostretchy/**/*.py",
    "src/audiostretchy/**/*.so",
    "src/audiostretchy/**/*.dylib", 
    "src/audiostretchy/**/*.dll",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/audio-stretch",
    "/scripts",
    "pyproject.toml",
    "README.md",
    "LICENSE.txt",
    "AUTHORS.md",
]

# Development environment
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0", 
    "pytest-cov>=4.0.0",
    "soundfile>=0.12.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "soundfile>=0.12.0",
    "pytest-cov>=4.0.0",
]

# Testing configuration
[tool.pytest.ini_options]
addopts = "--cov=src/audiostretchy --cov-report=term-missing --verbose"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "performance: marks tests as performance benchmarks (may be slow)",
]

# Linting and formatting
[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# A focused, enforceable set: pyflakes/pycodestyle correctness, import order,
# pyupgrade modernization, bugbear, comprehensions, simplify, naming, pathlib.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "N", "PTH", "PIE", "RUF"]
# E501: line length is handled by the formatter; long prose comments are fine.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over strictness; the C-library build helper is a
# standalone script that legitimately prints and shells out.
"tests/**" = ["N", "B", "SIM", "PTH", "PIE"]
"src/audiostretchy/c_interface/build.py" = ["PTH", "N"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# build.py is a standalone C-library build helper, not part of the runtime API.
exclude = ["build/", "dist/", "c_interface/build\\.py$"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
